tests/negative/gold/invalid-class-name-constructor-type-test.gold
tests/negative/invalid-class-name-constructor-type-test.toit:5:7: error: Expected class name
class :
      ^
tests/negative/invalid-class-name-constructor-type-test.toit:5:7: error: A class with factories must have a constructor
class :
      ^
Couldn't find 'main' (with 0 or 1 argument) in entry file 'tests/negative/invalid-class-name-constructor-type-test.toit'
tests/negative/invalid-class-name-constructor-type-test.toit:7:5: error: Can't return `null` from factory
    return null
    ^~~~~~
tests/negative/invalid-class-name-constructor-type-test.toit:10:5: error: Can't return incompatible type 'List' from factory
    return []
    ^~~~~~
Compilation failed
